<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#72CC6666"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_inv_nameHeader"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_inv_hippoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview"
            android:textColor="#5D4037" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_inv_ageHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_inv_hippoAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview"
            android:textColor="#5D4037" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_inv_favFoodHeader"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/favourite_food"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_inv_hippoFavFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_inv_hippoImage"
        android:layout_width="match_parent"
        android:layout_height="337dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/hippo1" />
</LinearLayout>